--- a/hedgehog-book/docs/Math/Basic Operations/factorial.mdx
+++ b/hedgehog-book/docs/Math/Basic Operations/factorial.mdx
@@ -11,7 +11,7 @@ use latex
 
 
 
-<iframe src="https://hhlab.dev/?code=*import%20math%3Afactorial%0A%0Alet%20a%20%3D%20new%20Mat(%5B%5B5%2C2%5D%2C%5B3%2C7%5D%5D)%3B%0A%0Aprint('a%20%3D%20'%2Ba)%0Aprint('%5Cn')%0A%0Alet%20b%20%3D%205%0A%0A%2F%2Ffactorial%20of%205%20should%20be%205*4*3*2*1%20%3D120%0Aprint('Factorial%20of%20b%20is%20%3A'%2Bfactorial(b))%0A%0Aprint('Factorial%20of%20matrix%20a%20(elementwise)%20%3D%20'%2Bfactorial(a))%0A%0Aprint('20!%20%3D%20'%2Bfactorial(20))&auto_run=true"
+<iframe src="https://hlab.app/s/docs/factorial_hbook"
     width="100%"
     height="500px">
   </iframe>
